# qtcreator-plugin-tabs

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  constants.h  mainwindowfilter.cpp  mainwindowfilter.h  plugin.cpp  plugin.h  tabbar.cpp  tabbar.h  tabs.json.in
.github/workflows/: ci.yml
buildutils/: build_win.bat  build_wsl.sh  install-qt.qs.in
lib/qtcreator/: ExtensionSystem4.lib  Utils4.lib
lib/qtcreator/plugins/: Core4.lib  ProjectExplorer4.lib  TextEditor4.lib
